add auth/logout
